# simple_password_generator

./: README.md  mobile.py  pass_gen.py  pass_gen_wuth_gui  pass_gen_wuth_gui.py  password_gen.py  pyproject.toml
.github/workflows/: main.yml
.guthub/workflows/: android.yml
src/pass_gen/: app.py
src/password_generator/: app.py
