
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple_password_generator"
version = "0.1.0"
description = "тетс апк"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "toga",
]

[project.scripts]
password-generator = "password_generator.app:main"

[tool.briefcase]
project_name = "Password Generator"
bundle = "com.github.yourusername.passwordgenerator"
version = "0.1.0"
url = "https://github.com/yourusername/password-generator"
license = "MIT"
author = "Your Name"
author_email = "your.email@example.com"

[tool.briefcase.app.password-generator]
formal_name = "генерал паролей"
description = "делаем пароли случайно"
sources = ["src/password_generator"]
icon = "src/password_generator/icon"

[tool.briefcase.app.password-generator.android]
permissions = [
    "INTERNET",
    "ACCESS_NETWORK_STATE",
]
